--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-    <body>
-	W I TERRONI
-    </body>
+	<head><title>PEPPE</title>
+		<body>
+			<center><h1>W I TERRONI</h1></center>
+		</body>
+    	</head>
 </html>
