--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 	<head><title>PEPPE</title>
 		<body>
 			<center><h1>W I TERRONI</h1></center>
-		</body>
+				<body>
+					<h2>Peppe Il Terrone</h2>
+					<img src="./Files/mafioso.png">
+				</body>
     	</head>
 </html>
