--- a/index.html
+++ b/index.html
@@ -1,10 +1,46 @@
 <html>
-	<head><title>PEPPE</title>
+	<head><title>PEPPENEWS</title>
 		<body>
-			<center><h1>W I TERRONI</h1></center>
+			<center><h1 style="font-size:300%;">PeppeNews</h1></center>
 				<body>
 					<h2>Peppe Il Terrone</h2>
-					<img src="./Files/mafioso.png">
+					<table>
+						<tr>
+							<td><img src="./Files/mafioso.png"></td>
+							<td><p style="font-size:160%;">Scoperta allucinante il fallito Peppe è così tanto gay che non sa manco quante volte ha preso il cazzo in 1v1</p></td>
+						<tr>
+					<table>
+					<table>
+						<tr>
+							<td><img src="./Files/veneto.jpg"></td>
+							<td><p style="font-size:160%;">I veneti specialmente i contadini sono meglio dei terroni sotto tutti i punti di vista</p></td>
+						<tr>
+					<table>
+				  <table>
+						<tr>
+							<td><img src="./Files/Among Mommi.png"></td>
+							<td><p style="font-size:160%;">I Wattusi con i lori diritti sono riusciti a fare 10 metri ogni 3 passi</p></td>
+						<tr>
+					<table>
+					<table>
+						<tr>
+							<td><img src="./Files/bidet tower.png"></td>
+							<td><p style="font-size:160%;">I francesi hanno sempre usato il bidet e gli hanno anche dedicato un monumento la bidet tower accanto alla loro creata torre eiffel</p></td>
+						<tr>
+					<table>
+					<table>
+						<tr>
+							<td><img src="./Files/rolex.jpg"></td>
+							<td><p style="font-size:160%;">I napoletani non rubano, è soltanto una diceria messa in giro dai poteri forti per distogliere l'attenzione dalla loro pessima pizza</p></td>
+							<td><img src="./Files/pizza napoletana.jpg" width="620" height="340"></td>
+						<tr>
+					<table>
+					<table>
+						<tr>
+							<td><img src="./Files/sceva.png"></td>
+							<td><p style="font-size:160%;">Una foto di sceva da grande</p></td>
+						<tr>
+					<table>
 				</body>
     	</head>
 </html>
