Changed veneto size

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 					<table>
 					<table>
 						<tr>
-							<td><img src="./Files/veneto.jpg"></td>
+							<td><img src="./Files/veneto.jpg" width="600" height="800"></td>
 							<td><p style="font-size:160%;">I veneti specialmente i contadini sono meglio dei terroni sotto tutti i punti di vista</p></td>
 						<tr>
 					<table>
