--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<table>
 					<table>
 						<tr>
-							<td><img src="./Files/rolex.png"></td>
+							<td><img src="./Files/sceva.png"></td>
 							<td><p style="font-size:160%;">Una foto di sceva da grande</p></td>
 						<tr>
 					<table>
