--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<table>
 						<tr>
 							<td><img src="./Files/sceva.png"></td>
-							<td><p style="font-size:160%;">Una foto di sceva da grande</p></td>
+							<td><p style="font-size:160%;">Una foto di Sceva da grande</p></td>
 						<tr>
 					<table>
 				</body>
