--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
 							<td><p style="font-size:160%;">Una foto di Sceva da grande</p></td>
 						<tr>
 					<table>
+					<table>
+						<tr>
+							<td><img src="./Files/merlo kebbabaro.png" width="600" height="550"></td>
+							<td><p style="font-size:160%;">E per ultimo Merlo il più bravo a scegliere kebbabari, per non parlare delle sue skill nei videogiochi migliora ogni settimana ormai ha superato anche Mongraal </p></td>
+						<tr>
+					<table>
 				</body>
     	</head>
 </html>
